Fixed Supplemental table 1
previously used pd.concat but it should have used a series of pd.merge's

--- a/Interactive_manuscript.ipynb
+++ b/Interactive_manuscript.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 1,
    "metadata": {
     "id": "RR2M9UUGUqst"
    },
@@ -1500,7 +1500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -1531,9 +1531,9 @@
        "      <th>Region</th>\n",
        "      <th>Country</th>\n",
        "      <th>Participants</th>\n",
-       "      <th>Category</th>\n",
-       "      <th>Category</th>\n",
-       "      <th>Category</th>\n",
+       "      <th>MMC level</th>\n",
+       "      <th>Interventions</th>\n",
+       "      <th>Outcomes</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1546,8 +1546,8 @@
        "      <td>Latin America &amp; Caribbean</td>\n",
        "      <td>Bolivia</td>\n",
        "      <td>39</td>\n",
-       "      <td>C, TL, L, LS, MMC_closure, MMC_age_mean, Morta...</td>\n",
-       "      <td>VPS, Ix_USS</td>\n",
+       "      <td>C, TL, L, LS</td>\n",
+       "      <td>VPS</td>\n",
        "      <td>MMC_postop_wbreak</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1559,9 +1559,9 @@
        "      <td>Europe &amp; Central Asia</td>\n",
        "      <td>Turkey</td>\n",
        "      <td>7</td>\n",
-       "      <td>MMC_closure, FU</td>\n",
-       "      <td>VPS, EVD</td>\n",
-       "      <td>MMC_postop_meningitis, MMC_postop_other</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>VPS</td>\n",
+       "      <td>Mi, HC_postop_meningitis</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1572,9 +1572,9 @@
        "      <td>Europe &amp; Central Asia</td>\n",
        "      <td>Denmark</td>\n",
        "      <td>59</td>\n",
-       "      <td>MMC_closure, FU</td>\n",
-       "      <td>VPS, Other</td>\n",
-       "      <td>HC_postop_meningitis</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>VPS</td>\n",
+       "      <td>Mi, Mp, MMC_postop_winfex, MMC_postop_meningitis</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1585,8 +1585,8 @@
        "      <td>North America</td>\n",
        "      <td>United States</td>\n",
        "      <td>5</td>\n",
-       "      <td>T, TL, L, LS, S, MMC_closure, HC_other_ICP, FU</td>\n",
-       "      <td>VPS</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>VPS, Other</td>\n",
        "      <td>Mi, Mp</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1598,9 +1598,9 @@
        "      <td>North America</td>\n",
        "      <td>United States</td>\n",
        "      <td>12</td>\n",
-       "      <td>L, MMC_closure, MMC_age_mean, Mortality_intrao...</td>\n",
-       "      <td>VPS, ETV/CPC, Ix_MRI, Ix_USS</td>\n",
-       "      <td>Cr, HC_postop_meningitis</td>\n",
+       "      <td>C, TL, L, LS</td>\n",
+       "      <td>VPS, Other</td>\n",
+       "      <td>Fr, Failure_rate_VPS</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -1625,7 +1625,7 @@
        "      <td>India</td>\n",
        "      <td>39</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>SS</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1638,8 +1638,8 @@
        "      <td>United States</td>\n",
        "      <td>9</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>SS, EVD, VPS</td>\n",
+       "      <td>Tf, HC_postop_meningitis</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>81</th>\n",
@@ -1650,9 +1650,9 @@
        "      <td>North America</td>\n",
        "      <td>United States</td>\n",
        "      <td>2</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>LS</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>Fr, Cr, MMC_postop_winfex</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>82</th>\n",
@@ -1664,8 +1664,8 @@
        "      <td>United States</td>\n",
        "      <td>37</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>VPS</td>\n",
+       "      <td>Cr, HC_postop_meningitis</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>83</th>\n",
@@ -1677,8 +1677,8 @@
        "      <td>Nigeria</td>\n",
        "      <td>9</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>ETV</td>\n",
+       "      <td>Fr, Failure_rate_ETV, Tf, Mi, Mp, Cr</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1712,125 +1712,102 @@
        "82          High income              North America  United States   \n",
        "83  Lower middle income         Sub-Saharan Africa        Nigeria   \n",
        "\n",
-       "    Participants                                           Category  \\\n",
-       "0             39  C, TL, L, LS, MMC_closure, MMC_age_mean, Morta...   \n",
-       "1              7                                    MMC_closure, FU   \n",
-       "2             59                                    MMC_closure, FU   \n",
-       "3              5     T, TL, L, LS, S, MMC_closure, HC_other_ICP, FU   \n",
-       "4             12  L, MMC_closure, MMC_age_mean, Mortality_intrao...   \n",
-       "..           ...                                                ...   \n",
-       "79            39                                                NaN   \n",
-       "80             9                                                NaN   \n",
-       "81             2                                                NaN   \n",
-       "82            37                                                NaN   \n",
-       "83             9                                                NaN   \n",
+       "    Participants     MMC level Interventions  \\\n",
+       "0             39  C, TL, L, LS           VPS   \n",
+       "1              7           NaN           VPS   \n",
+       "2             59           NaN           VPS   \n",
+       "3              5           NaN    VPS, Other   \n",
+       "4             12  C, TL, L, LS    VPS, Other   \n",
+       "..           ...           ...           ...   \n",
+       "79            39           NaN            SS   \n",
+       "80             9           NaN  SS, EVD, VPS   \n",
+       "81             2            LS         Other   \n",
+       "82            37           NaN           VPS   \n",
+       "83             9           NaN           ETV   \n",
        "\n",
-       "                        Category                                 Category  \n",
-       "0                    VPS, Ix_USS                        MMC_postop_wbreak  \n",
-       "1                       VPS, EVD  MMC_postop_meningitis, MMC_postop_other  \n",
-       "2                     VPS, Other                     HC_postop_meningitis  \n",
-       "3                            VPS                                   Mi, Mp  \n",
-       "4   VPS, ETV/CPC, Ix_MRI, Ix_USS                 Cr, HC_postop_meningitis  \n",
-       "..                           ...                                      ...  \n",
-       "79                           NaN                                      NaN  \n",
-       "80                           NaN                                      NaN  \n",
-       "81                           NaN                                      NaN  \n",
-       "82                           NaN                                      NaN  \n",
-       "83                           NaN                                      NaN  \n",
+       "                                            Outcomes  \n",
+       "0                                  MMC_postop_wbreak  \n",
+       "1                           Mi, HC_postop_meningitis  \n",
+       "2   Mi, Mp, MMC_postop_winfex, MMC_postop_meningitis  \n",
+       "3                                             Mi, Mp  \n",
+       "4                               Fr, Failure_rate_VPS  \n",
+       "..                                               ...  \n",
+       "79                                               NaN  \n",
+       "80                          Tf, HC_postop_meningitis  \n",
+       "81                         Fr, Cr, MMC_postop_winfex  \n",
+       "82                          Cr, HC_postop_meningitis  \n",
+       "83              Fr, Failure_rate_ETV, Tf, Mi, Mp, Cr  \n",
        "\n",
        "[84 rows x 10 columns]"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import numpy as np\n",
+    "header1 = [ 'IID', 'First_author', 'Year_of_publication', 'Study_design',\n",
+    "            'Income_group', 'Region', 'Country', 'N' ]\n",
     "\n",
-    "# Define constant header columns for 'df_studies'\n",
-    "HEADER1 = ['IID', 'First_author', 'Year_of_publication', 'Study_design',\n",
-    "           'Income_group', 'Region', 'Country', 'N']\n",
+    "#Studies\n",
+    "df_studies[header1].rename({'N': 'Participants'}, axis=1).merge(\n",
     "\n",
-    "# Define columns related to MMC level in 'df_features'\n",
-    "MMC_COLUMNS = ['IID', 'MMC_cervical', 'MMC_thoracic', 'MMC_thoracolumbar', 'MMC_lumbar', 'MMC_lumbosacral', 'MMC_sacral']\n",
+    "    #Vertebral level\n",
+    "    df_features[\n",
+    "        ['IID', 'MMC_cervical',\t'MMC_thoracic',\t'MMC_thoracolumbar',\t'MMC_lumbar',\t'MMC_lumbosacral',\t'MMC_sacral']\n",
+    "    ].melt(id_vars=['IID'], var_name='MMC level')[\n",
+    "        df_features[\n",
+    "            ['IID', 'MMC_cervical',\t'MMC_thoracic',\t'MMC_thoracolumbar',\t'MMC_lumbar',\t'MMC_lumbosacral',\t'MMC_sacral']\n",
+    "        ].melt(id_vars=['IID'], var_name='MMC level').value.notnull()\n",
+    "    ].drop('value', axis=1).replace(\n",
+    "        regex=[ '^MMC_cervical$', '^MMC_thoracic$', '^MMC_thoracolumbar$', '^MMC_lumbar$', '^MMC_lumbosacral$', '^MMC_sacral$' ],\n",
+    "        value=[ 'C', 'T', 'TL', 'L', 'LS', 'S' ]\n",
+    "    ).drop_duplicates().groupby('IID')['MMC level'].apply(\n",
+    "        lambda x: ', '.join(x)\n",
+    "    ).reset_index(),\n",
+    "    on='IID', how='outer'\n",
     "\n",
-    "# Define a dictionary to replace MMC column names with abbreviated values\n",
-    "MMC_REPLACE_DICT = {\n",
-    "    '^MMC_cervical$': 'C',\n",
-    "    '^MMC_thoracic$': 'T',\n",
-    "    '^MMC_thoracolumbar$': 'TL',\n",
-    "    '^MMC_lumbar$': 'L',\n",
-    "    '^MMC_lumbosacral$': 'LS',\n",
-    "    '^MMC_sacral$': 'S'\n",
-    "}\n",
+    ").merge(\n",
     "\n",
-    "# Columns to be dropped from 'df_management'\n",
-    "TX_COLUMNS_DROP = ['Tx_per_pt_mean', 'Tx_per_pt_median', 'Tx_per_pt_sd', 'Tx_per_pt_range']\n",
+    "    #Interventions\n",
+    "    df_management.drop(\n",
+    "            ['Tx_per_pt_mean', 'Tx_per_pt_median', 'Tx_per_pt_sd', 'Tx_per_pt_range', 'Ix_CT',\t'Ix_MRI',\t'Ix_USS',\t'Ix_clinical'],\n",
+    "            axis=1\n",
+    "        ).melt(id_vars=['IID'], var_name='Interventions')[\n",
+    "            df_management.drop(\n",
+    "                ['Tx_per_pt_mean', 'Tx_per_pt_median', 'Tx_per_pt_sd', 'Tx_per_pt_range', 'Ix_CT',\t'Ix_MRI',\t'Ix_USS',\t'Ix_clinical'],\n",
+    "                axis=1\n",
+    "            ).melt(id_vars=['IID'], var_name='Interventions').value.notnull()\n",
+    "        ].drop('value', axis=1).replace(\n",
+    "            regex=[ '^VPS.+$', '^ETV_\\d.+$', '^ETV_CPC.+$', '^ETV_to_VPS.+$', '^Conservative.+$', '^EVD.+$', '^Subgaleal.+$', '^Other.+$' ],\n",
+    "            value=[ 'VPS', 'ETV', 'ETV/CPC', 'ETV>VPS', 'C', 'EVD', 'SS', 'Other' ]\n",
+    "        ).drop_duplicates().groupby('IID')['Interventions'].apply(\n",
+    "            lambda x: ', '.join(x)\n",
+    "        ).reset_index(),\n",
+    "    on='IID', how='outer'\n",
     "\n",
-    "# Define a dictionary to replace intervention-related column names with abbreviated values\n",
-    "TX_REPLACE_DICT = {\n",
-    "    '^VPS.+$': 'VPS',\n",
-    "    '^ETV_\\d.+$': 'ETV',\n",
-    "    '^ETV_CPC.+$': 'ETV/CPC',\n",
-    "    '^ETV_to_VPS.+$': 'ETV>VPS',\n",
-    "    '^Conservative.+$': 'C',\n",
-    "    '^EVD.+$': 'EVD',\n",
-    "    '^Subgaleal.+$': 'SS',\n",
-    "    '^Other.+$': 'Other'\n",
-    "}\n",
+    ").merge(\n",
     "\n",
-    "# Columns to be dropped from 'df_outcomes'\n",
-    "OUTCOME_COLUMNS_DROP = ['Failure_reasons', 'Mortality_reasons_1st_line', 'Mortality_reasons_2nd_line']\n",
+    "    #Outcomes\n",
+    "    df_outcomes.drop(\n",
+    "        ['Failure_reasons', 'Mortality_reasons_1st_line', 'Mortality_reasons_2nd_line'],\n",
+    "        axis=1\n",
+    "    ).melt(id_vars=['IID'], var_name='Outcomes')[\n",
+    "        df_outcomes.drop(\n",
+    "            ['Failure_reasons', 'Mortality_reasons_1st_line', 'Mortality_reasons_2nd_line'],\n",
+    "            axis=1\n",
+    "        ).melt(id_vars=['IID'], var_name='Outcomes').value.notnull()\n",
+    "    ].drop('value', axis=1).replace(\n",
+    "        regex=[ '^Mortality_intraop.+$', '^Mortality_periop.+$', '^Complication_rate.+$', '^Failure_rate$', '^Time_to_failure.+$' ],\n",
+    "        value=[ 'Mi', 'Mp', 'Cr', 'Fr', 'Tf' ]\n",
+    "    ).drop_duplicates().groupby('IID')['Outcomes'].apply(\n",
+    "        lambda x: ', '.join(x)\n",
+    "    ).reset_index(),\n",
+    "    on='IID', how='outer'\n",
     "\n",
-    "# Define a dictionary to replace outcome-related column names with abbreviated values\n",
-    "OUTCOME_REPLACE_DICT = {\n",
-    "    '^Mortality_intraop.+$': 'Mi',\n",
-    "    '^Mortality_periop.+$': 'Mp',\n",
-    "    '^Complication_rate.+$': 'Cr',\n",
-    "    '^Failure_rate$': 'Fr',\n",
-    "    '^Time_to_failure.+$': 'Tf'\n",
-    "}\n",
-    "\n",
-    "def process_dataframe(df, columns_to_drop, replace_dict):\n",
-    "    \"\"\"\n",
-    "    Process a dataframe by:\n",
-    "    - Melting it based on 'IID'\n",
-    "    - Filtering out rows with null values in the 'value' column\n",
-    "    - Replacing column names based on the provided dictionary\n",
-    "    - Grouping by 'IID' and joining categories for each 'IID'\n",
-    "    \n",
-    "    Parameters:\n",
-    "    - df: DataFrame to be processed\n",
-    "    - columns_to_drop: List of columns to be dropped from the dataframe\n",
-    "    - replace_dict: Dictionary for replacing column names\n",
-    "    \n",
-    "    Returns:\n",
-    "    - Grouped DataFrame with processed columns\n",
-    "    \"\"\"\n",
-    "    melted_df = df.drop(columns_to_drop, axis=1).melt(id_vars=['IID'], var_name='Category')\n",
-    "    filtered_df = melted_df[melted_df.value.notnull()].drop('value', axis=1)\n",
-    "    replaced_df = filtered_df.replace(regex=replace_dict).drop_duplicates()\n",
-    "    grouped_df = replaced_df.groupby('IID')['Category'].apply(lambda x: ', '.join(x)).reset_index()\n",
-    "    return grouped_df\n",
-    "\n",
-    "# Extract study-related columns and rename 'N' to 'Participants'\n",
-    "studies_df = df_studies[HEADER1].rename({'N': 'Participants'}, axis=1)\n",
-    "\n",
-    "# Process MMC-related data from 'df_features'\n",
-    "mmc_df = process_dataframe(df_features, [], MMC_REPLACE_DICT)\n",
-    "\n",
-    "# Process intervention-related data from 'df_management'\n",
-    "interventions_df = process_dataframe(df_management, TX_COLUMNS_DROP, TX_REPLACE_DICT)\n",
-    "\n",
-    "# Process outcome-related data from 'df_outcomes'\n",
-    "outcomes_df = process_dataframe(df_outcomes, OUTCOME_COLUMNS_DROP, OUTCOME_REPLACE_DICT)\n",
-    "\n",
-    "# Concatenate all processed dataframes and drop redundant 'IID' column\n",
-    "final_df = pd.concat([studies_df, mmc_df, interventions_df, outcomes_df], axis=1).drop('IID', axis=1).astype({'Participants':'int'})\n",
-    "\n",
-    "final_df\n"
+    ").drop('IID', axis=1).astype({'Participants':'int'})"
    ]
   },
   {
