add requirement file

--- a/Interactive_manuscript.ipynb
+++ b/Interactive_manuscript.ipynb
@@ -44,12 +44,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Run this cell in Google Colab to install the required packages \n",
+    "!wget https://github.com/nooralteneiji/Myelomeningocele-Associated-Hydrocephalus-A-Systematic-Review-and-Meta-Analysis/blob/main/requirements.txt\n",
+    "!pip install -r requirements.txt\n",
+    "!echo \"install.packages(\\\"metafor\\\", repos=\\\"https://cran.rstudio.com\\\")\" | R --no-save\n",
+    "!echo \"install.packages(\\\"multcomp\\\", repos=\\\"https://cran.rstudio.com\\\")\" | R --no-save"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {
     "id": "RR2M9UUGUqst"
    },
    "outputs": [],
    "source": [
+    "# Run this cell to retrieve the data from the GitHub repository\n",
     "import pandas as pd\n",
     "\n",
     "# Path to the Excel data file\n",
@@ -69,120 +83,6 @@
     "\n",
     "# Load 'Outcomes' sheet \n",
     "df_outcomes = pd.read_excel(f, sheet_name='Outcomes')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Package                   Version\n",
-      "------------------------- -----------\n",
-      "ansi2html                 1.8.0\n",
-      "appnope                   0.1.3\n",
-      "asttokens                 2.2.1\n",
-      "attrs                     23.1.0\n",
-      "backcall                  0.2.0\n",
-      "certifi                   2023.7.22\n",
-      "cffi                      1.15.1\n",
-      "charset-normalizer        3.2.0\n",
-      "click                     8.1.7\n",
-      "comm                      0.1.4\n",
-      "dash                      2.13.0\n",
-      "dash-core-components      2.0.0\n",
-      "dash-html-components      2.0.0\n",
-      "dash-table                5.0.0\n",
-      "debugpy                   1.6.7.post1\n",
-      "decorator                 5.1.1\n",
-      "et-xmlfile                1.1.0\n",
-      "executing                 1.2.0\n",
-      "fastjsonschema            2.18.0\n",
-      "Flask                     2.2.5\n",
-      "idna                      3.4\n",
-      "ipykernel                 6.25.1\n",
-      "ipython                   8.14.0\n",
-      "itsdangerous              2.1.2\n",
-      "jedi                      0.19.0\n",
-      "Jinja2                    3.1.2\n",
-      "jsonschema                4.19.0\n",
-      "jsonschema-specifications 2023.7.1\n",
-      "jupyter_client            8.3.0\n",
-      "jupyter_core              5.3.1\n",
-      "jupyter-dash              0.4.2\n",
-      "MarkupSafe                2.1.3\n",
-      "matplotlib-inline         0.1.6\n",
-      "nbformat                  5.9.2\n",
-      "nest-asyncio              1.5.7\n",
-      "numpy                     1.24.2\n",
-      "openpyxl                  3.1.2\n",
-      "packaging                 23.0\n",
-      "pandas                    1.5.3\n",
-      "parso                     0.8.3\n",
-      "patsy                     0.5.3\n",
-      "pexpect                   4.8.0\n",
-      "pickleshare               0.7.5\n",
-      "pip                       23.0.1\n",
-      "platformdirs              3.10.0\n",
-      "plotly                    5.16.1\n",
-      "prompt-toolkit            3.0.39\n",
-      "psutil                    5.9.5\n",
-      "ptyprocess                0.7.0\n",
-      "pure-eval                 0.2.2\n",
-      "pycparser                 2.21\n",
-      "Pygments                  2.16.1\n",
-      "python-dateutil           2.8.2\n",
-      "pytz                      2022.7.1\n",
-      "pyzmq                     25.1.1\n",
-      "referencing               0.30.2\n",
-      "requests                  2.31.0\n",
-      "retrying                  1.3.4\n",
-      "rpds-py                   0.10.0\n",
-      "rpy2                      3.5.1\n",
-      "scipy                     1.10.1\n",
-      "setuptools                67.6.1\n",
-      "six                       1.16.0\n",
-      "stack-data                0.6.2\n",
-      "statsmodels               0.13.5\n",
-      "tenacity                  8.2.3\n",
-      "tornado                   6.3.3\n",
-      "traitlets                 5.9.0\n",
-      "typing_extensions         4.7.1\n",
-      "tzlocal                   5.0.1\n",
-      "urllib3                   2.0.4\n",
-      "wcwidth                   0.2.6\n",
-      "Werkzeug                  2.2.3\n",
-      "wheel                     0.40.0\n",
-      "xlrd                      2.0.1\n",
-      "\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m23.0.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m23.2.1\u001b[0m\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpython3.11 -m pip install --upgrade pip\u001b[0m\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
-   "source": [
-    "pip list\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
-   "source": [
-    "pip freeze > requirements.txt\n"
    ]
   },
   {
